Fix WebRTC signaling and leave button in check.js

--- a/public/check.html
+++ b/public/check.html
@@ -33,7 +33,7 @@
     <div id="controls">
       <button onclick="toggleMute()">마이크 끄기/켜기</button>
       <button onclick="toggleVideo()">카메라 끄기/켜기</button>
-      <button onclick="leaveRoom()">방 나가기</button>
+      <button id="leave-button">방 나가기</button>
     </div>
   </div>
 
