--- a/public/check.html
+++ b/public/check.html
@@ -3,40 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>여행 학생 점호 시스템</title>
+  <title>점호 시스템</title>
   <link rel="stylesheet" href="css/check.css">
   <script src="https://js.pusher.com/8.4.0/pusher.min.js"></script>
 </head>
 <body>
-  <!-- User selection section -->
   <div id="user-selection">
     <h1>점호 시스템</h1>
-    <input type="text" id="room-number" placeholder="방 번호 (1-8) 또는 교사">
-    <input type="text" id="user-id" placeholder="사용자 이름/번호">
+    <input type="text" id="room-number" placeholder="방 번호 (교사 또는 1-8)">
+    <input type="text" id="user-id" placeholder="사용자 이름">
     <button onclick="proceed()">입장</button>
   </div>
-
-  <!-- Video call section (9-grid for all users) -->
   <div id="video-call" style="display: none;">
-    <h2>점호 방</h2>
-    <div id="video-grid">
-      <div id="slot-teacher" class="video-slot"><span>교사</span></div>
-      <div id="slot-room1" class="video-slot"><span>1번 방</span></div>
-      <div id="slot-room2" class="video-slot"><span>2번 방</span></div>
-      <div id="slot-room3" class="video-slot"><span>3번 방</span></div>
-      <div id="slot-room4" class="video-slot"><span>4번 방</span></div>
-      <div id="slot-room5" class="video-slot"><span>5번 방</span></div>
-      <div id="slot-room6" class="video-slot"><span>6번 방</span></div>
-      <div id="slot-room7" class="video-slot"><span>7번 방</span></div>
-      <div id="slot-room8" class="video-slot"><span>8번 방</span></div>
+    <div class="video-grid">
+      <div id="slot-teacher"><span>교사</span></div>
+      <div id="slot-room1"><span>1번 방</span></div>
+      <div id="slot-room2"><span>2번 방</span></div>
+      <div id="slot-room3"><span>3번 방</span></div>
+      <div id="slot-room4"><span>4번 방</span></div>
+      <div id="slot-room5"><span>5번 방</span></div>
+      <div id="slot-room6"><span>6번 방</span></div>
+      <div id="slot-room7"><span>7번 방</span></div>
+      <div id="slot-room8"><span>8번 방</span></div>
     </div>
-    <div id="controls">
-      <button onclick="toggleMute()">마이크 끄기/켜기</button>
-      <button onclick="toggleVideo()">카메라 끄기/켜기</button>
-      <button id="leave-button">방 나가기</button>
-    </div>
+    <button id="leave-button">방 나가기</button>
+    <button onclick="toggleMute()">음소거 전환</button>
+    <button onclick="toggleVideo()">비디오 전환</button>
   </div>
-
   <script src="js/check.js"></script>
 </body>
 </html>
