--- a/public/check.html
+++ b/public/check.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>점호 시스템</title>
-  <link rel="stylesheet" href="css/check.css">
-  <script src="https://js.pusher.com/8.4.0/pusher.min.js"></script>
+  <link rel="stylesheet" href="/css/check.css">
 </head>
 <body>
   <div id="user-selection">
@@ -14,22 +13,28 @@
     <input type="text" id="user-id" placeholder="사용자 이름">
     <button onclick="proceed()">입장</button>
   </div>
+
   <div id="video-call" style="display: none;">
+    <h1>점호 방</h1>
     <div class="video-grid">
-      <div id="slot-teacher"><span>교사</span></div>
-      <div id="slot-room1"><span>1번 방</span></div>
-      <div id="slot-room2"><span>2번 방</span></div>
-      <div id="slot-room3"><span>3번 방</span></div>
-      <div id="slot-room4"><span>4번 방</span></div>
-      <div id="slot-room5"><span>5번 방</span></div>
-      <div id="slot-room6"><span>6번 방</span></div>
-      <div id="slot-room7"><span>7번 방</span></div>
-      <div id="slot-room8"><span>8번 방</span></div>
+      <div class="video-slot" id="slot-teacher"><span>교사</span></div>
+      <div class="video-slot" id="slot-room1"><span>1번 방</span></div>
+      <div class="video-slot" id="slot-room2"><span>2번 방</span></div>
+      <div class="video-slot" id="slot-room3"><span>3번 방</span></div>
+      <div class="video-slot" id="slot-room4"><span>4번 방</span></div>
+      <div class="video-slot" id="slot-room5"><span>5번 방</span></div>
+      <div class="video-slot" id="slot-room6"><span>6번 방</span></div>
+      <div class="video-slot" id="slot-room7"><span>7번 방</span></div>
+      <div class="video-slot" id="slot-room8"><span>8번 방</span></div>
     </div>
-    <button id="leave-button">방 나가기</button>
-    <button onclick="toggleMute()">음소거 전환</button>
-    <button onclick="toggleVideo()">비디오 전환</button>
+    <div class="controls">
+      <button id="mute-button" onclick="toggleMute()">마이크 끄기/켜기</button>
+      <button id="video-button" onclick="toggleVideo()">카메라 끄기/켜기</button>
+      <button id="leave-button" onclick="leaveRoom()">방 나가기</button>
+    </div>
   </div>
-  <script src="js/check.js"></script>
+
+  <script src="https://js.pusher.com/8.4.0/pusher.min.js"></script>
+  <script src="/js/check.js"></script>
 </body>
 </html>
